--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     implementation "android.arch.lifecycle:common-java8:1.1.1"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "androidx.lifecycle:lifecycle-common-java8:2.2.0"
+    implementation "androidx.cardview:cardview:1.0.0"
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-v4:23.4.0"
 }
