--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <service
-                android:name=".model.MetarService"
+                android:name=".model.MetarIntentService"
                 android:enabled="true"
                 android:exported="true">
         </service>
 
-        <activity android:name=".view.MainActivity"
+        <activity android:name=".view.SearchByCodeActivity"
             android:launchMode="singleTop">
 <!--            <intent-filter>-->
 <!--                <action android:name="android.intent.action.MAIN" />-->
